<resources>
    <string name="app_name">Android_Laboratorna2</string>
    <string name="titleText">Замовлення квітів</string>
    <string name="radioButtonColorWhiteText">Білий</string>
    <string name="radioButtonColorBlueText">Блакитний</string>
    <string name="radioButtonColorRedText">Червоний</string>
    <string name="radioButtonColorYellowText">Жовтий</string>
    <string name="orderDetailsText">Інформація про замовлення: </string>
    <string name="buttonOKText">OK</string>
    <string name="buttonCancelText">Cancel</string>
    <string name="colorText">Колір:</string>
    <string name="PriceRangeText">Ціновий діапазон</string>
    <string name="radioButtonPriceRange1Text">200 – 300 грн</string>
    <string name="radioButtonPriceRange2Text">300 – 600 грн</string>
    <string name="radioButtonPriceRange3Text">600 – 1000 грн</string>
    <string name="radioButtonPriceRange4Text">1000 – 2000 грн</string>
    <string name="toastAlertMessage">Ви не заповнили усі дані!</string>
    <string name="orderOutputText">Колір: %1$s. Ціновий діапазон: %2$s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>